release/1.16.4/VERSION.md
# 1.16.4

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.16.4```   |
| Release Time   | ```2020-10-29T15:49:37+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.16```   |
| sha1   | ```f3c4aa96e12951cd2781b3e1c0e8ab82bf719cf2```   |
| size   | ```295227```   |
| total size  | ```334438503```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/f3c4aa96e12951cd2781b3e1c0e8ab82bf719cf2/1.16.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```1952d94a0784e7abda230aae6a1e8fc0522dba99```   |
| size   | ```17546582```   |
| url       | ```https://piston-data.mojang.com/v1/objects/1952d94a0784e7abda230aae6a1e8fc0522dba99/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```35139deedbd5182953cf1caa23835da59ca3d7cd```   |
| size   | ```37961464```   |
| url       | ```https://piston-data.mojang.com/v1/objects/35139deedbd5182953cf1caa23835da59ca3d7cd/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |